--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
 
     
     <ul>
-      <li><a href="./1-timer.html"></a></li>
-      <li><a href="./2-snackbar.html"></a></li>
+      <li><a href="./1-timer.html">Timer page</a></li>
+      <li><a href="./2-snackbar.html">Snackbar page</a></li>
     </ul>
 
-    <script type="module" src="./main.js"></script>
+    <!-- <script type="module" src="./main.js"></script> -->
   </body>
 </html>
